--- a/src/languages/JP.json
+++ b/src/languages/JP.json
@@ -2,26 +2,26 @@
     "UE lives": "UE",
     "Existing User, Login": "ログイン",
     "Register with Mobile No.": "新規登録（電話番号から）",
-    "Register with Email": "新規登録（メールアドレスから）",
+    "Register with Email": "新規登録（メールドレスから）",
     "Forgot Password": "パスワードを忘れた方はこちら",
     "Or Login with Other Accounts": "以下の方法からログイン",
     "Weibo": "Weibo",
     "WeChat": "WeChat",
     "Facebook": "Facebook",
-    "Enter Your Mobile No. or Email": "電話番号/メールアドレス入力",
+    "Enter Your Mobile No. or Email": "電話番号/メールドレス入力",
     "Enter Your Password": "パスワードを入力",
     "Login": "ログイン",
     "Country or Region Code": "国/地域コード",
     "Enter Mobile No.": "電話番号を入力",
-    "Get Verification Code": "認証コードを取得",
-    "Enter Verification Code": "認証コードを入力",
+    "Get Verification Code": "検証番号を取得",
+    "Enter Verification Code": "検証番号を入力",
     "Set Password: at Least 6 Characters": "パスワードを設定（6文字以上）",
     "Enter Password again": "確認のため、もう一度パスワードを入力",
     "Read the Privacy Policy": "利用規約/プライバシーポリシー",
     "Agree and Register": "同意して登録する",
-    "Enter Email Address": "メールアドレスを入力",
-    "Enter Verification Code": "認証コードを入力",
-    "Get Verification Code": "認証コードを取得",
+    "Enter Email Address": "メールドレスを入力",
+    "Enter Verification Code": "検証番号を入力",
+    "Get Verification Code": "検証番号を取得",
     "Set Password: at Least 6 Characters": "パスワードを設定（6文字以上）",
     "Enter Password again": "確認のため、もう一度パスワードを入力",
     "Read the Privacy Policy": "利用規約/プライバシーポリシー",
@@ -47,21 +47,21 @@
     "Join": "会員登録",
     "Working Days": "仕事可能日選択",
     "Set (No application in non-working days)": "新しい仕事日を選択",
-    "Experience": "翻訳経験",
+    "Experience": "翻訳·通訳経験",
     "Describe Your Experience": "翻訳経験をお書き下さい",
     "Add Experience": "新しい経験を追加",
     "Profile": "プロフィール",
     "Edit Profile": "編集",
-    "Detailed information": "詳細な情報",
+    "Detailed information": "マイプロフィール",
     "Nickname": "ニックネ―ム",
-    "Real Name": "実名",
+    "Real Name": "名前",
     "Gender": "性別",
     "Male": "男",
     "Female": "女",
     "Place": "地域",
     "Industry": "職業",
     "Mobile No.": "電話番号",
-    "Email": "メールアドレス",
+    "Email": "メールドレス",
     "Save": "保存",
     "Cancel": "取り消し",
     "Account Balance": "アカウント残額",
@@ -73,10 +73,10 @@
     "Enter Complete Bank Name Correctly": "銀行名を略さずに記入",
     "Bank Account No.": "口座名",
     "Cardholder Name": "口座名義",
-    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "お引き出し申請後２,３仕事日で、現金は自動的に銀行口座に振り込まれます。もし質問等ございましたら{{value}}までご連絡下さい",
+    "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "引き出しの申請後２,３仕事日で、現金は自動的に銀行口座に振り込まれます。もし質問等ございましたら{{value}}までご連絡下さい",
     "Submit": "申請する",
     "Withdraw Record": "お引き出し履歴",
-    "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "お引き出し通知:あなたのお引き出し申請は承認されました。取引に関する詳しい情報は銀行に直接お問い合わせ下さい現状：申請承認/取引中",
+    "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "お引き出し通知:あなたの引き出しの申請は承認されました。取引に関する詳しい情報は銀行に直接お問い合わせ下さい現状：審査合格/取引中",
     "Enter Search Keywords, Language/Place/Price/Type": "キーワード検索",
     "Language": "言語",
     "Place": "地域",
@@ -171,7 +171,7 @@
     "Terms of Use": "利用規約",
     "Version": "バージョン",
     "About Us": "会社案内",
-    "Contact Us": "お問い合わせ",
+    "Contact Us": "問い合わせ／質問",
     "Ads": "広告掲載相談",
     "Log out": "ログアウト",
     "Receive Notifications": "通知ON",
@@ -188,12 +188,12 @@
     "My Followings": "Myコレクション",
     "Change Transaction Password": "パスワードを変更する",
     "Back": "後退",
-    "Loading": "加載中",
+    "Loading": "アップロード中",
     "Load More": "もっと見る",
     "No More": "ここまで",
     "Setting": "設定",
     "Change Password": "パスワードの変更",
-    "Enter Verification Code": "認証コードを入力",
+    "Enter Verification Code": "検証番号を入力",
     "Enter Password": "パスワード入力",
     "Share the App": "シェアする",
     "Applicants": "申込者",
@@ -228,56 +228,56 @@
     "Sunday": "日曜日",
     "Introduction": "説明",
     "Non-working Days": "非作業日",
-    "Go Complete Profile": "個人情報を改善",
+    "Go Complete Profile": "プロフィールを完成（します）",
     "Modify Profile": "資料変更",
-    "Quit": "放棄する",
-    "Bad Attitude": "態度の悪い",
+    "Quit": "キャンセル",
+    "Bad Attitude": "態度が悪い",
     "Cheating": "詐欺行為",
     "Infringement": "侵犯行為",
     "Other Reasons": "その他の原因",
-    "Cost Fee": "サービス料",
+    "Cost Fee": "給料基準",
     "Remove": "削除",
-    "Add": "添加",
-    "No Authenication Information": "無認証情報",
+    "Add": "追加",
+    "No Authenication Information": "審査情報なし",
     "Certificate Name": "証明書の名称",
     "Example": "例",
     "In the audit": "審査待ち",
-    "Audit did not pass, re certification": "審査が通っていませんが、再認証",
-    "Authentication Pass": "審査に合格",
-    "Immediately certification": "すぐに認証",
+    "Audit did not pass, re certification": "審査が通っていませんが、再審査してください",
+    "Authentication Pass": "審査合格",
+    "Immediately certification": "すぐに審査します",
     "No authentication": "無認証",
     "Due Bank": "銀行名",
     "Due Bank": "口座名",
     "Account holder": "口座名義",
-    "Status": "現状",
-    "Audit pass, transfer": "申請承認/取引中",
-    "Withdrawal Time": "お引き出し時間",
-    "cash Time": "お引き出し時間",
+    "Status": "状態",
+    "Audit pass, transfer": "申請承認/振り込み完了",
+    "Withdrawal Time": "引き出し時間",
+    "cash Time": "引き出し時間",
     "Edit": "編集",
-    "Close": "閉鎖",
-    "Important Notice": "※注意書き",
-    "UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us.": "UE Livesは通訳者と旅行者を繋げるプラットフォームを提供するサービスです。具体的なサービスについては各自が良く考慮してお選び下さい。弊社は一切の責任を負いかねます。ご理解下さい。万が一、プラン説明には明示されていない活動を強要された場合は速やかに弊社までお知らせ下さい。",
-    "Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed.": "タスクの詳細について紹介して下さい（行程や持ち物、その他の必要事項）※注意：通訳以外のタスク中に生じた支出は全て自己負担となります。例）入場料、交通費等",
+    "Close": "閉じる",
+    "Important Notice": "ご注意",
+    "UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us.": "UE Livesは旅行者と通訳・翻訳者をつなぐ場で、現地のサービス等を提供しません。利用するときに各自よく選別してから利用してください。弊社は一切の責任を負いませんので、ご理解してください。万が一、プラン説明には明示されていない活動を強要された場合は速やかに弊社までお知らせ下さい。info@unlives.com",
+    "Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed.": "タスクの詳細について説明して下さい（日程や持ち物、その他の必要事項）※注意：通訳以外のタスク中に生じた費用は全てタスクを依頼する方が負担します。例）入場料、交通費等",
     "Please introduce yourself briefly, e.g. your skills and speciality, to let others know more about you.": "簡単に自分を紹介して下さい（趣味、特技等）",
     "Kindly describe": "也请描述下",
     "working hours, and whether there is charge for extra hour(s);": "毎日の稼働可能時間、延長料金の有無",
     "working areas (which city/cities);": "稼働可能区域",
-    "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "空港出迎えなどその他のサービスの有無とそれらの料金プラン",
-    "other remarks, please sepcify.": "その他特記事項",
+    "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "空港出迎え、その他のサービスの有無と、その料金",
+    "other remarks, please sepcify.": "備考",
     "Area of expertise": "専門知識の分野",
     "Language Level": "言語レベル",
     "Comments Count": "条の評価",
     "No Comments Submitted yet": "まだコメントはありません",
-    "Upload at Least One Photo": "少なくとも1つの写真をアップロードする",
+    "Upload at Least One Photo": "一枚以上の写真をアップロードします",
     "Pls. Enter description here": "説明を入力してください",
-    "Submit to Authentication": "確認をアップロード",
-    "Information Authentication will be finish in two day": "認証情報は2日以内に完了します",
+    "Submit to Authentication": "（アップロードを）確認",
+    "Information Authentication will be finish in two day": "審査情報が2日間以内に完了します",
     "Not Create,Back": "いいえ。戻る",
-    "Create": "創建",
+    "Create": "新規",
     "age": "年齢",
     "age": "公開する",
     "Private": "公開しない",
-    "Date of Birth": "誕生日",
+    "Date of Birth": "生年月日",
     "Please Set Transaction Password First": "まず取引のパスワードを設定",
     "Based on Local Time": "現地時間で表示します",
     "Please Note:": "ご注意！",
@@ -292,17 +292,17 @@
     "paid": "支払う",
     "Total": "合計",
     "xx of the total price is chareged as service fee.": "取引金額の{{value}}の手数料",
-    "Personal ID Verification Passed": "ID認証審査に合格",
+    "Personal ID Verification Passed": "ID認証審査合格しました。",
     "Leave": "一時的に離れます",
-    "Continue": "記入し続ける",
-    "You haven't Set Transaction Password. Go Set?": "あなたが取引パスワードを設定しませんでした,設置?",
+    "Continue": "続けて記入します。",
+    "You haven't Set Transaction Password. Go Set?": "取引パスワードを設定していません、設定しますか？",
     "Please Install UE Lives APP to Enjoy All Functions": "完全な機能を利用できるために、UE Lives APP をダウンロードしてください",
     "Contact Number": "連絡先",
     "Enter Your Nickname": "ニックネームを入力してください",
-    "Enter Your Real Name": "本当の名前を入力してください",
-    "Enter the Industry in Which You are Working": "業界を入力してください",
+    "Enter Your Real Name": "名前を入力してください",
+    "Enter the Industry in Which You are Working": "職業を入力してください",
     "Select Your Region": "地域を選択してください",
-    "Enter Your Mobile No. or Email": "電話番号/メールアドレス入力",
+    "Enter Your Mobile No. or Email": "電話番号/メールドレス入力",
     "Init. Pwd. 666666 for WeChat, Weibo, FB": "WeChat、Weibo、FB初期パスワード 666666",
     "No more than 4hrs. counts as half day. If you have different service charges, please elaborate details in your 'Profile'.": "４時間以下を半日と計算。謝金の詳細については、プロフィールに記入してください。",
     "No more than 4hrs. counts as half day": "４時間以下を半日と計算"
