--- a/www/languages/CN.json
+++ b/www/languages/CN.json
@@ -27,7 +27,7 @@
     "Read the Privacy Policy": "阅读悠译用户隐私条款",
     "Agree and Register": "同意协议并注册",
     "Create Task": "发布任务",
-    "Task List": "任务清单",
+    "Task List": "我的任务",
     "Messages": "我的消息",
     "Rent Your Talent": "成为翻译",
     "My Followings": "我的收藏",
@@ -93,7 +93,7 @@
     "Task Details": "任务详情",
     "Home": "主页",
     "Create Task": "发起任务",
-    "Task List": "任务清单",
+    "Task List": "我的任务",
     "UE": "悠译人",
     "Messages/chat": "对话",
     "Select Language": "语言选择",
