--- a/www/languages/KR.json
+++ b/www/languages/KR.json
@@ -19,7 +19,7 @@
     "Enter Password again": "비밀번호 재입력",
     "Read the Privacy Policy": "개인정보보호 구독",
     "Agree and Register": "동의 및 가입",
-    "Enter Email Address": "이메일주소 입력",
+    "Enter Email Address": "이메일지역 입력",
     "Enter Verification Code": "인증번호 입력",
     "Get Verification Code": "인증번호 받기",
     "Set Password: at Least 6 Characters": "비밀번호 설정하기: 최소 6자",
@@ -27,29 +27,29 @@
     "Read the Privacy Policy": "개인정보보호 구독",
     "Agree and Register": "동의 및 가입",
     "Create Task": "작업 생성",
-    "Task List": "작업 목록",
+    "Task List": "나의 미션",
     "Messages": "메신저 ",
-    "Rent Your Talent": "통역사가 되어주세요",
-    "My Followings": "내가 관심사",
-    "My Wallet": "나의 계좌",
+    "Rent Your Talent": "통역사 되기",
+    "My Followings": "즐겨찾기",
+    "My Wallet": "나의 지갑",
     "Language": "언어",
     "Add Language": "언어 추가",
-    "Type": "통역가능한 종류",
-    "Add Type": "종류 추가",
+    "Type": "유형",
+    "Add Type": "유형 추가",
     "Personal Identity": "개인인증",
     "ID Verification": "실명인증",
-    "Upload ID Card": "아이디카드 업로드",
-    "Language Certificate": "언어 자격증",
-    "Upload Certificate": "자격증 업로드",
-    "Professional Qualification": "자격증",
-    "Upload Qualification": "자격증 업로드",
+    "Upload ID Card": "신원증명서 업로드",
+    "Language Certificate": "언어 인증",
+    "Upload Certificate": "언어 자격증 업로드",
+    "Professional Qualification": "업계 자격 인증",
+    "Upload Qualification": "관련 업계 자격증 업로드",
     "Membership": "멤버쉽",
     "Join": "가입",
-    "Working Days": "작업 가능한 날짜",
-    "Set (No application in non-working days)": "시간추가(휴일엔 초대알람이 가지 않습니다)",
-    "Experience": "직업 경험",
+    "Working Days": "작업일",
+    "Set (No application in non-working days)": "작업일 추가 (휴일에는 초대문자를 받을 수 없습니다)",
+    "Experience": "번역 및 통역 경력",
     "Describe Your Experience": "경험 소개",
-    "Add Experience": "경험 추가",
+    "Add Experience": "경력 추가",
     "Profile": "프로필",
     "Edit Profile": "프로필 수정",
     "Detailed information": "자세한 정보",
@@ -58,7 +58,7 @@
     "Gender": "성별",
     "Male": "남자",
     "Female": "여자",
-    "Place": "현재 주소",
+    "Place": "지역",
     "Industry": "직업",
     "Mobile No.": "휴대폰 번호",
     "Email": "이메일",
@@ -69,20 +69,20 @@
     "Payment Password": "결제 비밀번호",
     "Amount": "금액",
     "Max. Amount xxx": "최대 금액 xxx",
-    "Bank Name": "은행이름",
-    "Enter Complete Bank Name Correctly": "은행이름 (공식명칭)",
+    "Bank Name": "계좌개설은행",
+    "Enter Complete Bank Name Correctly": "계좌개설은행 (공식명칭)",
     "Bank Account No.": "은행계좌번호",
-    "Cardholder Name": "카드소지자 이름",
+    "Cardholder Name": "예금주",
     "Once your application is approved, money will be transferred to you account after 2-3 working days. Any inquiries, Pls. Contact xxxx": "출금요청이 승인되면 2-3 영업일 후 송금됩니다. 문의는 {{value}}로 해주세요",
     "Submit": "제출",
     "Withdraw Record": "출금기록",
     "Withdraw Notice:Dear XXX, your application has been approved. Pls. contact your bank for transaction details if necessary.Status: Approved. Transaction Completed.": "출금 통지        xxx님에게, 회원님의 요청이 승인되었습니다. 세부사항은 은행에게 직접 문의하세요.           상태: 승인. 거래완료",
     "Enter Search Keywords, Language/Place/Price/Type": "키워드 입력",
     "Language": "언어",
-    "Place": "현재 주소",
+    "Place": "지역",
     "Popular Cities": "핫플레이스",
-    "Price": "가격",
-    "Price": "종류",
+    "Price": "비용",
+    "Price": "유형",
     "/hr.": "/시간당",
     "/day": "/일수당",
     "Business": "비즈니스",
@@ -93,25 +93,25 @@
     "Task Details": "작업 정보",
     "Home": "홈페이지",
     "Create Task": "작업 생성",
-    "Task List": "작업 목록",
+    "Task List": "나의 미션",
     "UE": "UE",
     "Messages/chat": "메시지",
     "Select Language": "언어선택",
     "Enter the Language to be Translated": "번역될 언어를 선택하세요",
     "Add Another Language": "언어추가",
     "Next": "다음",
-    "8 hrs./day, <=4hrs. count as 0.5 day": "8시간/일,  4시간/일은 0.5일로 계산 ",
+    "8 hrs./day, <=4hrs. count as 0.5 day": "8시간/일,  4시간 미만은 0.5일로 계산합니다.",
     "Title": "제목",
-    "Type": "종류",
+    "Type": "유형",
     "Business": "사업",
     "Travel": "여행",
     "Others": "기타",
-    "Price": "가격",
+    "Price": "비용",
     "Day": "일",
     "Hr.": "시간",
-    "Place": "현재 주소",
+    "Place": "지역",
     "Title": "제목",
-    "Task Details": "작업 정보",
+    "Task Details": "상세 정보",
     "Previous": "이전",
     "Confirm": "확인",
     "Start Date": "시작일",
@@ -128,7 +128,7 @@
     "To be Rated": "후기 남기기",
     "Closed": "작업 완료",
     "Language": "언어",
-    "Place": "현재 주소",
+    "Place": "지역",
     "Profile": "프로필",
     "Follow": "팔로우",
     "Followed": "팔로잉",
@@ -150,7 +150,7 @@
     "Upload Photos": "사진 올리기",
     "Followed by XXX": "{{value}}님이 팔로우를 했습니다",
     "Number of Tasks Completed": "작업 완료한 개수",
-    "Completion Rate": "호평 속도",
+    "Completion Rate": "호평율",
     "Apply": "신청",
     "Pending": "처리중",
     "Accepted": "수락",
@@ -195,7 +195,7 @@
     "Change Password": "비밀번호 변경",
     "Enter Verification Code": "인증번호 입력",
     "Enter Password": "비밀번호 입력",
-    "Share the App": "공유",
+    "Share the App": "공유하기",
     "Applicants": "지원자",
     "Accept": "받고",
     "Reject": "거절하다",
@@ -210,7 +210,7 @@
     "Agree Or Not?": "초대를 수락 할지 여부 ?",
     "Date": "날짜",
     "To": "에",
-    "Total Price": "총 가격",
+    "Total Price": "총 비용",
     "Read Privacy": "읽기 사용자 협의",
     "Try Another": "아니 기록",
     "Please enter": "작성해 주세요",
@@ -230,53 +230,53 @@
     "Non-working Days": "비 작업일",
     "Go Complete Profile": "완성하다 자료",
     "Modify Profile": "수정 데자료",
-    "Quit": "포기",
+    "Quit": "나가기",
     "Bad Attitude": "태도가 아주 나쁘다",
-    "Cheating": "피들",
-    "Infringement": "위반",
-    "Other Reasons": "다른 원인",
-    "Cost Fee": "수수료",
+    "Cheating": "사기행위",
+    "Infringement": "침범행위",
+    "Other Reasons": "기타 원인",
+    "Cost Fee": "요금 기준",
     "Remove": "삭제",
     "Add": "추가",
-    "No Authenication Information": "어떤 인증 도 없다",
+    "No Authenication Information": "인증 내용이 없습니다.",
     "Certificate Name": "인증서 이름",
-    "Example": "예",
-    "In the audit": "지금 검증",
-    "Audit did not pass, re certification": "인증에 실패， 다시 인증",
-    "Authentication Pass": "인증 이미 통해",
-    "Immediately certification": "당장 인증",
-    "No authentication": "무 인증",
-    "Due Bank": "은행이름",
+    "Example": "진행방법 예시",
+    "In the audit": "인증 중입니다.",
+    "Audit did not pass, re certification": "인증에 실패하였습니다. 다시 시도해주세요.",
+    "Authentication Pass": "인증이 처리되였습니다.",
+    "Immediately certification": "인증하러 가기",
+    "No authentication": "인증기록이 없습니다.",
+    "Due Bank": "계좌개설은행",
     "Due Bank": "은행계좌번호",
-    "Account holder": "카드소지자 이름",
+    "Account holder": "예금주",
     "Status": "상태",
-    "Audit pass, transfer": "승인. 거래완료",
+    "Audit pass, transfer": "승인 완료되였습니다.. 거래완료",
     "Withdrawal Time": "출금시간",
     "cash Time": "출금시간",
     "Edit": "수정",
     "Close": "닫기",
     "Important Notice": "주의사항",
-    "UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us.": "UE Lives는 작업 거래하는 플랫폼입니다. 하지만, 서비스 제공사가 않입니다. UE Lives는 서비스을 제공하지 않습니다.사용자 잘 선택해 주시기 바랍니다. UE Lives는 분실에 대한 책임을 지지 않습니다. 작업 스케줄안에 없는 비 자발적인 활동이나 쇼핑등 있을 경우, 저희에게 알려주시기 바랍니다.",
-    "Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed.": "작업 내용, 일정 및 요구 사항을 자세히 설명해주세요. (예. 공항픽업, 렌터카 등 다른 서비스 요구있을 경우).주의: 번역요금외에 다른 서비스에 나온 별도 요금은 (예. 관광지 입장료, 교통비등) 작업요금안에 포함되지 않아, 작업발행자가 지급하여야합니다. 작업이 컨펌받기전에 인터프리터와 세부 사항을 협상을하여야 합니다.",
-    "Please introduce yourself briefly, e.g. your skills and speciality, to let others know more about you.": "다른사람과 더 빨리 친해지기 위해, 자기을 소개하시기 바랍니다. (예. 재능, 특징 등）",
-    "Kindly describe": "설명해주시기 바랍니다",
-    "working hours, and whether there is charge for extra hour(s);": "메일 서비스 기간. 추가 시간당 요금;",
-    "working areas (which city/cities);": "서비스 구역 (도시/지역);",
-    "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "기타 제공 서비스 (예. 렌터카, 공항픽업 등 서비스), 및 별도 서비스 요금;",
-    "other remarks, please sepcify.": "기타 특별주의사항을 표시하시기 바랍니다.",
+    "UE Lives provides this platform to facilitate transaction, but we are not a local service provider and do not provide local services. Users should select services wisely. UE Lives is not responsible for any lost. If there is any charge for non-voluntary activities or shopping, please report to us.": "UE Lives 어플은 여러분에게 플랫폼만 제공할뿐 서비스 제공업체가 아니며 현지 서비스 제공에 참여하지 않습니다. 사용자는 작업에 대해 자체로 선별하고 선택해주시기 바라며 이로 인해 생긴 문제는 저희가 책임을 지지 않습니다.일정에 표기되지 않은 본의 아닌 활동이나 쇼핑에 대해서는 신고해 주시기 바랍니다.",
+    "Please describe the task details, schedule, and requirements. If there is any request for other service (e.g. airport pick-up or vehicle), please specify.Note: any fee caused by other services and any additional fees(e.g.tickets for resorts, or intra - city transportation, etc.) are not included in the interpretering fee,and should be paid by the task owner.Please negotiate details with the interpreter after the task is confirmed.": "작업 내용, 스케줄 및 요구사항에 대해 자세히 기재해 주세요.(예를 들어 픽업 혹은 렌터카 등 기타 서비스가 필요할 경우)                                      주의사항: 기타 서비스에서 발생한 비용 및 별도의 경비(예를 들어 관광지 입장료 혹은 교통비 등)는 통역비용에 포함되지 않으므로 임무 발행자가 지급해야 되며 컨펌후 자체로 통역사와 상의 부탁드립니다.",
+    "Please introduce yourself briefly, e.g. your skills and speciality, to let others know more about you.": "다른 사람과 빨리 친숙해지기 위해 자신의 재능 및 특점에 대해 자세한 소개 부탁드립니다.",
+    "Kindly describe": "아래의 몇가지 사항도 기재해 주세요.",
+    "working hours, and whether there is charge for extra hour(s);": "매일 작업 시간 및 시간당 추가 요금;",
+    "working areas (which city/cities);": "작업 가능 지역;",
+    "other services available, such as vehicle, airport pick-up/deliver, and etc., and the charges accordingly;": "렌터카, 픽업 등 기타 서비스 제공 여부 및 추가 비용;",
+    "other remarks, please sepcify.": "기타 주요사항도 표시해 주세요.",
     "Area of expertise": "전문 분야",
     "Language Level": "언어수준",
     "Comments Count": "개인 평가",
-    "No Comments Submitted yet": "코멘트는 아직 제출",
-    "Upload at Least One Photo": "적어도 올린 사진 한 장",
+    "No Comments Submitted yet": "아직 평가를 하지 않았습니다.",
+    "Upload at Least One Photo": "사진을 적어도 한장 올려주세요.",
     "Pls. Enter description here": "설명을 입력하십시오",
     "Submit to Authentication": "업로드 확인",
     "Information Authentication will be finish in two day": "인증 정보를 에 이틀 내에 완성할 수 있을 것이다",
     "Not Create,Back": "아니, 돌아 가기",
     "Create": "만들기",
-    "age": "나이",
+    "age": "연령",
     "age": "전체 공개",
-    "Private": "나만 보기",
+    "Private": "비공개",
     "Date of Birth": "생년월일",
     "Please Set Transaction Password First": "먼저 거래비밀번호 설정",
     "Based on Local Time": "任务时间以任务地点时间计算",
@@ -291,14 +291,14 @@
     "Total": "총액",
     "xx of the total price is chareged as service fee.": "총 금액은 {{value}} 를 수수료",
     "Personal ID Verification Passed": "실명인증승인",
-    "Leave": "떠나다",
-    "Continue": "계속 써",
-    "You haven't Set Transaction Password. Go Set?": "거래하신 비번이 비어있습니다.개선 하시겠습니까",
+    "Leave": "나가기",
+    "Continue": "계속 쓰기",
+    "You haven't Set Transaction Password. Go Set?": "거래 비밀번호가 비어있습니다.작성해주시겠습니까?",
     "Please Install UE Lives APP to Enjoy All Functions": "다운로드 UE Lives APP, 전체 기능 사용.",
     "Contact Number": "연락처",
-    "Enter Your Nickname": "별명 입력하십시오.",
-    "Enter Your Real Name": "실제 이름을 입력하십시오.",
-    "Enter the Industry in Which You are Working": "니 업계 입력하십시오.",
+    "Enter Your Nickname": "닉네임을 입력해주세요.",
+    "Enter Your Real Name": "본인의 실제 성함을 입력해주세요.",
+    "Enter the Industry in Which You are Working": "업종을 선택해주세요.",
     "Select Your Region": "지역을 선택하세요",
     "Enter Your Mobile No. or Email": "휴대폰 번호/이메일",
     "Init. Pwd. 666666 for WeChat, Weibo, FB": "WeChat, Weibo, FB 초기 암호 666666",
